# gw_res

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.intent/project/: edges.json  meta.json
.intent/project/nodes/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+17 more)
configs/: pilot.yaml  poc.yaml  sim.yaml  smoke.yaml  t1.yaml  t1_full.yaml
configs/scale/: mini.yaml  s0_pico.yaml  s1_nano.yaml  s2_micro.yaml  world.yaml
docs/: conversation_summary.md  conversation_summary_2.md  sgm_mvp.md  technical_report.md
slurm/: example_stage.sbatch  submit.py
src/slm/: __init__.py  chat.py  config.py  data.py  evaluate.py  filters.py  finetune.py  generate.py  graph.py  graph_data.py  graph_evaluate.py  graph_pretrain.py  graph_tokenizer.py  graph_transform.py  infer.py  inspect.py  listener.py  market.py  model.py  pipeline.py  pretrain.py  prompts.py  render.py  report.py  sample.py  seeds.py  simtrain.py  tokenizer.py  utils.py  worldgen.py
src/slm/sim/: doctrine.yaml  schema.py
