[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-synthetic-poc"
version = "0.1.0"
description = "Train sub-1B language models from scratch on referent-free synthetic data"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tokenizers>=0.15",
]

[project.optional-dependencies]
train = ["torch>=2.2"]
generate = ["vllm>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
slm-pipeline = "slm.pipeline:main"
slm-generate = "slm.generate:main"
slm-tokenizer = "slm.tokenizer:main"
slm-data = "slm.data:main"
slm-inspect = "slm.inspect:main"
slm-pretrain = "slm.pretrain:main"
slm-finetune = "slm.finetune:main"
slm-evaluate = "slm.evaluate:main"
